fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+:root {
+  color-scheme: dark;
+}
+
 html {
   font-size: 16px;
 }
@@ -14,6 +18,8 @@ html {
 body {
   background: #16181A;
   font-family: 'Inter', sans-serif;
+  scrollbar-gutter: stable;
+  overflow-y: scroll;
   margin: 0;
   padding: 0;
 }
@@ -28,37 +34,33 @@ a:focus {
   ~~~~~~~~~~
 */
 
-.scrollstyle::-webkit-scrollbar-track,
-.scrollstyle::-ms-track {
+.scrollstyle {
+  scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
+}
+
+.scrollstyle::-webkit-scrollbar-track {
   background-color: transparent;
-  border-radius: 8px;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
 }
 
 .scrollstyle::-webkit-scrollbar {
+  -webkit-appearance: none;
   background-color: transparent;
-  width: 12px;
+  width: 6px;
 }
 
-.scrollstyle::-webkit-scrollbar-thumb,
-.scrollstyle::-ms-thumb {
+.scrollstyle::-webkit-scrollbar-thumb {
   background-color: transparent;
-  border-radius: 8px;
+  border-radius: 6px;
 }
 
-.scrollstyle:hover::-webkit-scrollbar-thumb,
-.scrollstyle:hover::-ms-thumb {
-  background-color: #49545B;
-  box-shadow: inset 0 0 6px rgba(255, 255, 255, .125), 0 0 6px rgba(0, 0, 0, .3);
+.scrollstyle:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
-.scrollstyle::-webkit-scrollbar-thumb:hover,
-.scrollstyle::-ms-thumb:hover {
-  background-color: #596971;
+.scrollstyle::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
-.scrollstyle::-webkit-scrollbar-thumb:active,
-.scrollstyle::-ms-thumb:hover {
-  background-color: #49545B;
-  box-shadow: none;
+.scrollstyle::-webkit-scrollbar-thumb:active {
+  background-color: rgba(255, 255, 255, 0.2);
 }
